# packages/commonwealth/server/middleware/lookupAddressIsOwnedByUser.ts
@@ -6,7 +6,10 @@ import { DB } from '../models';
 import { AddressInstance } from '../models/address';
 import { UserInstance } from '../models/user';
 
-type AddressChainReq = { body?: { author_chain: string, address: string }, user?: UserInstance };
+type AddressChainReq = {
+  body?: { author_chain: string; address: string };
+  user?: UserInstance;
+};
 
 type UnownedAddresses = { address: string } | { addressId: number };
 // returns a list of addresses owned and not owned by user
@@ -16,36 +19,38 @@ export const filterAddressOwnedByUser = async (
   chains: string[],
   addresses: string[],
   addressIds: number[]
-): Promise<{owned: AddressInstance[], unowned: UnownedAddresses[] }> => {
+): Promise<{ owned: AddressInstance[]; unowned: UnownedAddresses[] }> => {
   const where = {
     chain: { [Op.in]: chains },
-    user_id
+    user_id,
   };
 
   // filter out undefined nad null
-  const addressesClean = addresses.filter(a => a != null);
-  const addressIdsClean = addressIds.filter(a => a != null);
+  const addressesClean = addresses.filter((a) => a != null);
+  const addressIdsClean = addressIds.filter((a) => a != null);
 
   if (addressesClean.length !== 0) where['address'] = { [Op.in]: addresses };
   if (addressIdsClean.length !== 0) where['id'] = { [Op.in]: addressIds };
 
   // get the list of addresses owned by user
-  let addressesOwnedByUser: AddressInstance[] = await models.Address.findAll({ where });
-  addressesOwnedByUser = addressesOwnedByUser.filter(a => a.verified);
+  let addressesOwnedByUser: AddressInstance[] = await models.Address.findAll({
+    where,
+  });
+  addressesOwnedByUser = addressesOwnedByUser.filter((a) => a.verified);
 
   // cast to set to reduce access runtime
   const unownedAddressesSet = new Set(addressesClean);
   const unownedAddressIdsSet = new Set(addressIdsClean);
 
   // for each address owned by user, remove it from the unownedAddresses
-  addressesOwnedByUser.forEach(author => {
+  addressesOwnedByUser.forEach((author) => {
     unownedAddressesSet.delete(author.address);
     unownedAddressIdsSet.delete(author.id);
   });
 
   const unowned: UnownedAddresses[] = [];
-  unownedAddressesSet.forEach(address => unowned.push({ address }));
-  unownedAddressIdsSet.forEach(addressId => unowned.push({ addressId }));
+  unownedAddressesSet.forEach((address) => unowned.push({ address }));
+  unownedAddressIdsSet.forEach((addressId) => unowned.push({ addressId }));
 
   return { owned: addressesOwnedByUser, unowned };
 };
@@ -67,7 +72,7 @@ const lookupAddressIsOwnedByUser = async (
       chain: req.body.author_chain,
       address: req.body.address,
       user_id: req.user.id,
-    }
+    },
   });
   if (!author || !author.verified || author.user_id !== req.user.id) {
     return [null, 'Invalid public key/chain'];
